[project]
name = "cyber-security-report"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "claude-agent-sdk==0.2.87",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
]
